--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+body {
+  padding-top: 57px;
+}
+/*.header {*/
+
+  /*height: 600px;*/
+  /*width: 100%;*/
+  /*padding: 30px 0 30px;*/
+  /*margin-top: 0;*/
+  /*background: url(https://res.cloudinary.com/dn1b66xo5/image/upload/v1509825486/photo-1477238134895-98438ad85c30_ct10lk.jpg) no-repeat center center;*/
+  /*background-size: cover;*/
+  /*color: #fff;*/
+  /*position: fixed;*/
+/*}*/
+
+/*.header h1 {*/
+
+  /*font-size: 70px;*/
+  /*font-weight: 700;*/
+  /*padding-top: 30px;*/
+/*}*/
+/*div.row {*/
+  /*padding-top: 100px;*/
+/*}*/
